MODLD-68: extent note and appliesTo added